python/testData/quickFixes/PyRemoveTrailingSuffixQuickFixTest/fixl.py
<error descr="Python version 3.12 does not support a trailing 'l'">1000l</error>